--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "@types/react-transition-group": "^4.4.4",
+    "formik": "^2.2.9",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-spring": "^9.4.1",
+    "react-transition-group": "^4.4.2",
+    "sass": "^1.47.0"
   },
   "devDependencies": {
     "eslint": "8.6.0",
